--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <ul class="gallery"></ul>
 
-    <div class="loader is-hidden"></div>
+    <span class="loader is-hidden"></span>
   </main>
 
   <script type="module" src="./main.js"></script>
